apps/base/glefer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glefer
  labels:
    toolkit.fluxcd.io/tenant: dev-team
