apps/base/glefer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: glefer
  annotations:
    image.toolkit.fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: glefer/cv:run-19231149189 # {"$imagepolicy": "flux-system:glefer-cv"}
        ports:
        - containerPort: 80
          name: http
        - containerPort: 8080
          name: metrics-endpoint
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.11.0
        args:
        - -nginx.scrape-uri=http://localhost:8080/nginx_status
        ports:
        - containerPort: 9113
          name: metrics
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
